# CMakeExperiments

./: .gitignore  A.props  CMakeLists.txt  CMakePresets.json  MSBuild.props  Main.cpp  README.md
bugs/VSDebugger/src/: CMakeLists.txt  Hello.cpp  README.txt
bugs/escape_nonsense/src/: Bug.txt  CMakeLists.txt  Foo.out  Foo.txt  HelloWorld.cpp
bugs/msvc_public_private_linkage/src/: CMakeLists.txt
bugs/msvc_public_private_linkage/src/A/: A.cpp  A.hpp  CMakeLists.txt
bugs/msvc_public_private_linkage/src/B/: B.cpp  B.hpp  CMakeLists.txt
bugs/msvc_public_private_linkage/src/C/: C.cpp  C.hpp  CMakeLists.txt
bugs/static_library_with_import_std/src/: CMakeLists.txt  HelloWorld.cpp
bugs/visual_studio_project_label/src/: CMakeLists.txt
bugs/visual_studio_project_label/src/HelloWorldApp/: CmakeLists.txt  Main.cpp
bugs/visual_studio_project_label/src/HelloWorldLib/: CmakeLists.txt  HelloWorld.cpp  HelloWorld.h
examples/VS_SOLUTION_ITEMS/src/: CMakeLists.txt
examples/hello_world/src/: CMakeLists.txt
examples/hello_world_vcpkg/src/: CMakeLists.txt  HelloWorld.cpp
modules/module_partition_issue/src/: CMakeLists.txt  Module.cpp  Module.ixx  ModuleInternalPartition.cpp  ModulePartition.cpp  ModulePartition.ixx  ModulePartitionExtra.cpp
modules/module_stackoverflow/src/: Module.ixx  ModulePartition.cpp  ModulePartition.ixx
modules/modules/src/: CMakeLists.txt
modules/modules/src/main/: CMakeLists.txt  Main.cpp
modules/modules/src/module/: CMakeLists.txt  Module.cpp  Module.ixx  ModulePartition1.cpp  ModulePartition1.ixx  ModulePartition2.cpp  ModulePartition2.ixx  ModulePartition2A.cpp
package/: README.txt
package/Export/ExperimentalCPS/src/: CMakeLists.txt  print_target_properties.cmake
package/Export/ExperimentalDependencies/src/Consumer/: CMakeLists.txt  vcpkg.json
package/Export/ExperimentalDependencies/src/Producer/: CMakeLists.txt
package/Export/ExperimentalDependencies/src/Producer/GoodbyeWorld/: GoodbyeWorld.cpp
package/Export/HelloWorld/src/: CMakeLists.txt  Config.cmake.in
package/Install/ExperimentalCPS/src/: CMakeLists.txt
package/Install/ExperimentalCPS/src/HelloWorld/: HelloWorld.cpp
package/Install/ExperimentalDependencies/: HelloWorldTargets.cmake
package/Install/ExperimentalDependencies/src/: CMakeLists.txt
package/Install/ExperimentalDependencies/src/Consumer/: CMakeLists.txt  main.cpp  vcpkg.json
package/Install/ExperimentalDependencies/src/GoodbyeWorld/: CMakeLists.txt
package/Install/ExperimentalDependencies/src/HelloWorld/: CMakeLists.txt
package/Install/ExperimentalDependencies/src/Producer/: CMakeLists.txt  vcpkg.json
package/Install/ExperimentalDependencies/src/Producer/GoodbyeWorld/: CMakeLists.txt  GoodbyeWorld.cpp
package/Install/ExperimentalDependencies/src/Producer/HelloWorld/: CMakeLists.txt  HelloWorld.h
package/Install/HelloWorld/src/: CMakeLists.txt
package/Install/Producer/: CMakeLists.txt
package/Install/Producer/GoodbyeWorld/: CMakeLists.txt  GoodbyeWorld.cpp  GoodbyeWorld.h
package/Install/Producer/HelloWorld/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h
package/Manual/src/: README.txt
package/Manual/src/ConsumerDirect/: CMakeLists.txt  main.cpp  vcpkg.json
package/Manual/src/ConsumerImport/: CMakeLists.txt
package/Manual/src/Producer/: CMakeLists.txt
package/Manual/src/Producer/HelloWorld/: CMakeLists.txt
